gccida/g2/eliminate_regs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2748:29: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  eliminate_regs( rtx x, machine_mode mem_mode, rtx insn) 
                            ^
                            enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2751:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v4; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2767:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v22; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2787:4: error: expected ';' after expression
rtx v42; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2787:5: error: use of undeclared identifier 'v42'
rtx v42; // rdi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2790:4: error: expected ';' after expression
rtx v45; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2790:5: error: use of undeclared identifier 'v45'
rtx v45; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2792:4: error: expected ';' after expression
rtx v47; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2792:5: error: use of undeclared identifier 'v47'
rtx v47; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2794:4: error: expected ';' after expression
rtx v49; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2794:5: error: use of undeclared identifier 'v49'
rtx v49; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2795:4: error: expected ';' after expression
rtx v50; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2795:5: error: use of undeclared identifier 'v50'
rtx v50; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2800:4: error: expected ';' after expression
rtx v55; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2800:5: error: use of undeclared identifier 'v55'
rtx v55; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2803:4: error: expected ';' after expression
rtx v58; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2803:5: error: use of undeclared identifier 'v58'
rtx v58; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2805:6: error: expected ';' after expression
rtvec v60; // rax 
     ^
     ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/reload1.c:2805:7: error: use of undeclared identifier 'v60'
rtvec v60; // rax 
      ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_regs/src/obj/reload1.o] Error 1
